Dealer deals to 17

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Blackjack</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header></header>
-    <main>
+    <main id="main">
     </main>
-    <button>Hit me!</button>
+    <button id="hit">Hit me!</button>
+    <button id="stop">Stop</button>
+    <div id="dealerArea">
+    </div>
+    <footer></footer>
 </body>
 <script src="index.js"></script>
 
