Added points, new deal and some more

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header></header>
     <main id="main">
     </main>
+    <button id="newDeal">New deal</button>
     <button id="hit">Hit me!</button>
     <button id="stop">Stop</button>
     <div id="dealerArea">
